--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
-footer{
-    text-align: center;
+*{
+    font-family:'Verdana';
 }
+
+footer{
+    padding-top: 10px;
+    text-align: center;
+    height: 50px;
+}
+
+h2{
+    color: white;
+    padding: 0.2em;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: DodgerBlue;
+  }
+  
+  .flex-container > div {
+    background-color: #f1f1f1;
+    width: 100px;
+    margin: 2px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
