--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ h2{
     padding: 0.2em;
 }
 
+h3{
+background-color: rgb(113, 218, 113);
+
+}
+
 .flex-container {
     display: flex;
     flex-wrap: nowrap;
