Pridani casu + popisek u obrazku

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,3 +71,17 @@ h3{
   .fa-circle{
     color: lime;
   }
+
+  #clock{
+    color: white;
+
+  }
+
+  .time{
+    color: white;
+    margin-right: 10px;
+  }
+
+  .fa-clock{
+    color: white;
+  }
